<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentTop="true"
    tools:context="pl.pregiel.dice_app.activities.LoginActivity">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_login_loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_header"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryText"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/editText_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/all_border_2dp"
            android:ems="10"
            android:hint="@string/all_username"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:textColor="@color/colorSecondaryText" />

        <EditText
            android:id="@+id/editText_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/all_border_2dp"
            android:ems="10"
            android:hint="@string/all_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/colorSecondaryText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login_create"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:onClick="registration"
                android:text="@string/login_create"
                android:textAlignment="center" />

            <Button
                android:id="@+id/button_login_login"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_weight="1"
                android:onClick="login"
                android:text="@string/login_login"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
